--- a/index.css
+++ b/index.css
@@ -9,6 +9,8 @@
   --sky-500: rgb(14 165 233);
   --box-shadow-lg: 0 10px 15px -3px rgb(0 0 0 / 0.1),
     0 4px 6px -4px rgb(0 0 0 / 0.1);
+  --error-bkg: rgb(255, 241, 241);
+  --error-placeholder: rgb(255, 157, 157);
 }
 * {
   color: var(--grey-500);
@@ -86,6 +88,18 @@ button {
   outline: 1px solid var(--brand-dark);
   box-shadow: var(--box-shadow-lg);
   transition: all 0.3s ease;
+}
+
+.error-input {
+  background-color: var(--error-bkg);
+  color: var(--brand-dark);
+  border-color: var(--brand-dark);
+}
+.error-input::placeholder {
+  color: var(--error-placeholder);
+}
+.error-label {
+  color: var(--error-dark);
 }
 
 .mobile-show-logo {
