Updated minor error where the wrong class name was applied to a label
placeholder text was not correctly changing red due to a incorrectly named class, has now been fixed

--- a/index.css
+++ b/index.css
@@ -99,7 +99,7 @@ button {
   color: var(--error-placeholder);
 }
 .error-label {
-  color: var(--error-dark);
+  color: var(--brand-dark);
 }
 
 .mobile-show-logo {
